# lore-seeker-discord

./: Cargo.toml  README.md
assets/: lore-seeker-discord-dev.service  lore-seeker-discord.service
src/: find_cards.rs  lib.rs  main.rs  user_list.rs
