[package]
name = "lore-seeker"
version = "0.1.0"
authors = ["Fenhl <fenhl@fenhl.net>"]
edition = "2018"

[[bin]]
name = "lore-seeker"
path = "src/main.rs"
doc = false
test = false
bench = false

[dependencies]
chrono = "*"
kuchiki = "*"
rand = "*"
reqwest = "*"
serde = "1"
serde_derive = "1"
serde_json = "1"
serenity = "*"
shlex = "*"
typemap = "*"
url = "1"
urlencoding = "*"
whoami = "*"

[dependencies.mtg]
git = "https://github.com/fenhl/rust-mtg"
features = ["custom"]
