[package]
name = "lore-seeker"
version = "0.1.0"
authors = ["Fenhl <fenhl@fenhl.net>"]
edition = "2018"

[features]
default = ["local"]
local = [] # send requests to localhost:18803 instead of lore-seeker.cards

[lib]
name = "lore_seeker"
path = "src/lib.rs"

[[bin]]
name = "lore-seeker"
path = "src/main.rs"
doc = false
test = false
bench = false

[[bin]]
name = "find-cards"
path = "src/find_cards.rs"
doc = false
test = false
bench = false

[dependencies]
derive_more = "0"
env_logger = "0"
itertools = "0"
kuchiki = "0"
log = "0"
rand = "0"
reqwest = "0.9" #TODO update to 0.10 once serenity supports async
serde = "1"
serde_json = "1"
serenity = "0"
shlex = "0"
typemap = "0"
url = "2"
urlencoding = "1"
whoami = "0"

[dependencies.mtg]
git = "https://github.com/fenhl/rust-mtg"
features = ["custom"]
