[package]
name = "lore-seeker"
version = "0.1.0"
authors = ["Fenhl <fenhl@fenhl.net>"]
edition = "2018"

[features]
default = ["local"]
local = [] # send requests to localhost:18803 instead of lore-seeker.cards

[lib]
name = "lore_seeker"
path = "src/lib.rs"

[[bin]]
name = "lore-seeker"
path = "src/main.rs"
doc = false
test = false
bench = false

[[bin]]
name = "find-cards"
path = "src/find_cards.rs"
doc = false
test = false
bench = false

[dependencies]
env_logger = "0"
itertools = "0"
kuchiki = "0"
log = "0"
rand = "0"
reqwest = "0.9" #TODO update to 0.10 after updating serenity to 0.9
serde = "1"
serde_json = "1"
serenity = "0.8" #TODO update to 0.9
shlex = "0"
typemap = "0" #TODO remove after updating serenity to 0.9
url = "2"
urlencoding = "1"
whoami = "0"

[dependencies.derive_more]
version = "0.99"
default-features = false
features = ["from"]

[dependencies.mtg]
git = "https://github.com/fenhl/rust-mtg"
branch = "main"
features = ["custom"]
